Add french translations to the example app, extend the available locales and change the default locale

--- a/example/app/views/shared/_locale_links.html.haml
+++ b/example/app/views/shared/_locale_links.html.haml
@@ -2,4 +2,5 @@
 
 %ul#locale_links
   %li= link_to I18n.t("link_to_english"), "?locale=en"
+  %li= link_to I18n.t("link_to_french"), "?locale=fr"
   %li= link_to I18n.t("link_to_german"), "?locale=de"
