Refactoring example application : creating localized views with dummy-text in the correct language

--- a/example/app/views/layouts/application.html.haml
+++ b/example/app/views/layouts/application.html.haml
@@ -6,3 +6,9 @@
   
   %body
     = yield
+    
+    %hr
+    = render :partial => "/shared/navigation.html"
+    %hr
+    = render :partial => "/shared/locale_links.html"
+    
