Example application : Add helper for generating a link to the current controller / action with a given locale. Definition of exceptions for actions which can not be called with GET.

--- a/example/app/views/shared/_locale_links.html.haml
+++ b/example/app/views/shared/_locale_links.html.haml
@@ -1,6 +1,5 @@
-%h3= I18n.t("locales")
+%h3= I18n.t(:locales)
 
 %ul#locale_links
-  %li= link_to I18n.t("link_to_english"), "?locale=en"
-  %li= link_to I18n.t("link_to_french"), "?locale=fr"
-  %li= link_to I18n.t("link_to_german"), "?locale=de"
+  - [:en, :fr, :de].each do |locale| 
+    %li= link_to_locale locale, I18n.t("language_#{locale}")
